# NextIn

backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/src/: api.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 05e0a0d5e6d2_remove_redundant_status.py  7a0f72617020_remove_user_functionality_for_simplicity.py  94572f7a47c9_add_base_tables.py  be5ffb19efdd_add_look_type.py  e1c526a6665a_add_base_tables.py
backend/src/common/: exceptions.py  schemas.py
backend/src/core/: config.py  db.py  router.py  schemas.py
backend/src/fashion/: __init__.py  models.py  routes.py  schemas.py
backend/src/fashion/clothes/: __init__.py  models.py
backend/src/fashion/user/: models.py
backend/src/fashiongpt/: extractor.py  routes.py  schemas.py  suggestions.py
backend/src/fashiongpt/core/: llm.py
frontend/: package.json
frontend/pages/: _app.tsx  clothdb.tsx  index.tsx
frontend/src/api/: schemas.ts
frontend/src/app/: app-layout.module.scss  app-layout.service.ts  app-layout.tsx
frontend/src/dashboard/: dashboard.module.scss  dashboard.tsx  prompt.query.ts  prompt.tsx
frontend/src/dashboard/clothes/: clothes.module.scss  clothes.query.ts  clothes.tsx
frontend/src/styles/: globals.css
