[tool.poetry]
name = "nextin-backend"
version = "0.1.0"
description = ""
authors = ["Aishwarya Setia <setiaaishwarya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
httpx = "^0.27.2"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"
alembic-postgresql-enum = "^1.3.0"
orjson = "^3.10.11"
openai = "^1.54.4"
psycopg2 = "^2.9.10"
python-multipart = "^0.0.17"


[tool.poetry.group.dev.dependencies]
deptry = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
